--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -1,15 +1,29 @@
 .page {
     display: grid;
-    grid-template-columns: 1200px;
+    grid-template-columns: min(calc(1200px + 10vw), 100vw)
 }
 
 .page .heading {
-    height: 700px;
+    min-height: 250px;
+    filter: drop-shadow( 3px 5px 8px rgba(0, 0, 0, 0.6));
 }
 
 .page .display {
     width: 100%;
-    height: 3000px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, .95);
     border-radius: 50px 50px 0 0;
+}
+
+@media(max-width: 1700px) {
+    .page {
+        grid-template-columns: 80vw;
+
+    }
+}
+
+@media(max-width: 800px) {
+    .page {
+        grid-template-columns: 100vw;
+
+    }
 }
