--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@
     --layout-color: #008e40;
     --layout-text-color: white;
     --layout-enphasis-color: #ff348c;
+    --layout-emphasis-color-rgb: 255, 52, 140;
     --layout-enphasis-gradient: linear-gradient(200deg, rgb(240, 17, 92) 5%, var(--layout-enphasis-color) 100%);
 
     --bammer-border-color: #ebd64c;
