--- a/src/styles/index-page.css
+++ b/src/styles/index-page.css
@@ -37,3 +37,32 @@
 .index-page .display {
     height: 3000px;
 }
+
+@media(max-width: 1700px) {
+    .index-page .title h1 {
+        font-size: 30px;
+    }
+}
+
+@media(max-width: 800px) {
+    .index-page .title {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .index-page .title h1 {
+        width: 80%;
+        margin: 0;
+        font-size: 30px;
+        background-color: rgba(var(--layout-emphasis-color-rgb), 0.6);
+        padding: 36px;
+        border-radius: 50px;
+    }
+
+    .index-page .title > img {
+        width: 45%;
+        margin: 0;
+        margin-top: 15%;
+        margin-bottom: 10%;
+    }
+}
