--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -23,7 +23,7 @@
 
 @media(max-width: 800px) {
     .page {
-        grid-template-columns: 100vw;
+        grid-template-columns: 100%;
 
     }
 }
