--- a/src/styles/bannerImage.css
+++ b/src/styles/bannerImage.css
@@ -7,7 +7,7 @@
     top: -4px;
     left: -4px;
     height: 80vh;
-    width: 100%;
+    width: calc(100% + 4px);
     clip-path: polygon(0% 0%, 100vw 0%, 100vw 74.75%, 97.5% 76.85%, 95.6% 74.45%, 94.1% 78.5%, 91.55% 80.4%, 89.95% 77.35%, 88.05% 78.8%, 85.2% 75.45%, 84.1% 76.95%, 84.95% 81.1%, 83.15% 82.5%, 82.7% 86.25%, 80.6% 87.45%, 83.4% 90.8%, 77.85% 90%, 75.15% 86.85%, 73% 88.2%, 72.2% 92.4%, 70.8% 89.8%, 68.45% 89.4%, 67.8% 92.1%, 66.25% 92.75%, 64.4% 89%, 61.25% 89.4%, 60.3% 93.75%, 57.2% 95.75%, 54.55% 92.55%, 53.2% 94.35%, 49.95% 94.75%, 49.95% 99%, 48.1% 99.9%, 44.15% 99.2%, 42.25% 95.25%, 39.85% 94.85%, 38.2% 96.65%, 35.4% 92.4%, 30.55% 91.9%, 27.75% 94.05%, 24.9% 93.75%, 26.5% 91.2%, 24.75% 87.35%, 22% 89.2%, 19.9% 87.25%, 17.5% 88.2%, 15.45% 84.95%, 14.6% 80.8%, 11.4% 80.9%, 8.95% 83.05%, 6.95% 79%, 7% 75.25%, 5.2% 72.85%, 2.15% 73.05%, -0.1% 70.4%, -0.1% 9.8%);;
 
 }
@@ -44,8 +44,10 @@
 
 
 @media (max-aspect-ratio: 9/10) {
+
+
     .banner-image .banner-image-img  {
-        clip-path: polygon(100% 0%, 100% 79.4%, 96% 85.15%, 92.4% 86.05%, 88.65% 88.7%, 87.5% 92.3%, 84.2% 93.05%, 80.55% 94.75%, 76.7% 92.95%, 70.8% 94.05%, 69.1% 96.45%, 65.8% 97.25%, 62.05% 97.5%, 58.65% 100%, 55.55% 100.4%, 52.95% 100%, 48.85% 100%, 45% 100%, 42.95% 95.85%, 39.1% 95.05%, 34.65% 97.15%, 33.2% 94.75%, 29.55% 95.35%, 26% 92%, 20.9% 91.4%, 16.8% 93.05%, 12.75% 90.3%, 6.6% 91.7%, 8.5% 87.6%, 4.65% 85.25%, 0% 84.25%, 0% 0%);
+        clip-path: polygon(100% 0%, 100% 79.4%, 96% 85.15%, 92.4% 86.05%, 88.65% 88.7%, 87.5% 92.3%, 84.2% 93.05%, 80.55% 94.75%, 76.7% 92.95%, 70.8% 94.05%, 69.1% 96.45%, 65.8% 97.25%, 62.05% 97.5%, 58.65% 100%, 55.55% 103%, 52.95% 103%, 48.85% 103%, 45% 103%, 42.95% 95.85%, 39.1% 95.05%, 34.65% 97.15%, 33.2% 94.75%, 29.55% 95.35%, 26% 92%, 20.9% 91.4%, 16.8% 93.05%, 12.75% 90.3%, 6.6% 91.7%, 8.5% 87.6%, 4.65% 85.25%, 0% 84.25%, 0% 0%);
     }
 
     .banner-image .banner-image-border {
