--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -80,5 +80,12 @@
     top: var(--navbar-height-collapsed);
     display: grid;
     width: 100%;
+    min-height: calc(100vh - var(--navbar-height-collapsed));
     justify-items: center;
+}
+
+@media (max-width: 800px) {
+    .global-container .page-container {
+        justify-items: unset;
+    }
 }
