--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -53,7 +53,7 @@
 .navbar ul li:nth-child(1) {
     margin-right: 16px;
     padding-right: 16px;
-    border-right: 1px solid black;
+    border-right: 2px solid rgba(0, 0, 0, .3);
 }
 .navbar ul li a:hover {
     background-color: var(--layout-enphasis-color);
