--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -24,7 +24,7 @@
     background-color: rgba(255, 255, 255, .95);
     border-radius: 50px 50px 0 0;
     box-sizing: border-box;
-    padding: 48px 6% 0 6%;
+    padding: 48px 6% 100px 6%;
     font-size: 18px;
     font-weight: 500;
 }
