--- a/src/styles/collapsible.css
+++ b/src/styles/collapsible.css
@@ -9,11 +9,16 @@
     cursor: pointer;
     display: flex;
     justify-content: space-between;
-    align-content:center;
-    padding: 8px 24px;
+    align-content: center;
+    color: var(--layout-color);
+    border-bottom: 4px solid var(--layout-color);
+}
+
+.collapsible .collapsible-button {
+    cursor: pointer;
+    width: max(12%, 100px);
     background-color: var(--layout-color);
-    color: white;
-    height: 28px;
+    border: none;
 }
 
 .collapsible img {
@@ -22,7 +27,9 @@
 }
 
 .collapsible h2 {
+    width: 100%;
     margin: 0;
+    padding: 4px 0 8px 24px;
     font-size: 20px;
 }
 
@@ -30,4 +37,9 @@
     width: 100%;
     padding: 16px;
     box-sizing: border-box;
+}
+
+.collapsible svg {
+    height: 12px;
+    color: white;
 }
