--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -59,9 +59,10 @@
 }
 
 .navbar .navbar-mobile-menu {
-    height: 32px;
-    color: white;
+    height: 28px;
+    color: var(--bammer-border-color);
     display: none;
+    transition: var(--navbar-animation-timme);
 }
 
 .global-container > .collapsed {
@@ -70,6 +71,10 @@
 
 .global-container > .collapsed ul {
     margin-top: -36px;
+}
+
+.global-container > .collapsed .navbar-mobile-menu  {
+    margin-top: calc(var(--navbar-height) * -1.3);
 }
 
 .global-container > .collapsed .navbar-logo  {
