--- a/src/styles/index-page.css
+++ b/src/styles/index-page.css
@@ -51,13 +51,14 @@
     }
 
     .index-page .title h1 {
-        width: 80%;
+        width: 90%;
         margin: 0;
         margin-top: 10%;
         font-size: 20px;
         background-color: rgba(var(--layout-emphasis-color-rgb), 0.6);
         padding: 10%;
         border-radius: 50px;
+        box-sizing: border-box;
     }
 
     .index-page .title > img {
