--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -9,6 +9,7 @@
     width: 100vw;
     transition: var(--navbar-animation-timme);
     transition-property: height, padding, top;
+    filter: drop-shadow( 0px 0px 8px rgba(0, 0, 0, 0.4));
 }
 
 .navbar > div {
@@ -16,7 +17,7 @@
     display: flex;
     justify-content: space-between;
     margin: 0;
-    padding: 12px 4%;
+    padding: 12px 6%;
     width: 100%;
     height: 100%;
     box-sizing: border-box;
