Fixed content offset in desktop mode

--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -1,6 +1,7 @@
 .page {
     display: grid;
-    grid-template-columns: min(calc(1200px + 10vw), 100%);
+    
+    width: min(calc(1200px + 10vw), 100%);
     grid-template-rows: max-content auto;
     justify-items: center;
 }
