--- a/src/styles/bannerImage.css
+++ b/src/styles/bannerImage.css
@@ -1,13 +1,16 @@
 .banner-image {
     position: relative;
+    width: 100%;
+    height: 80vh;
+    overflow: hidden;
 }
 
 .banner-image .banner-image-img {
     position: absolute;
     top: -4px;
     left: -4px;
-    height: 80vh;
-    width: calc(100% + 4px);
+    height: 100%;
+    width: calc(100% + 8px);
     clip-path: polygon(0% 0%, 100vw 0%, 100vw 74.75%, 97.5% 76.85%, 95.6% 74.45%, 94.1% 78.5%, 91.55% 80.4%, 89.95% 77.35%, 88.05% 78.8%, 85.2% 75.45%, 84.1% 76.95%, 84.95% 81.1%, 83.15% 82.5%, 82.7% 86.25%, 80.6% 87.45%, 83.4% 90.8%, 77.85% 90%, 75.15% 86.85%, 73% 88.2%, 72.2% 92.4%, 70.8% 89.8%, 68.45% 89.4%, 67.8% 92.1%, 66.25% 92.75%, 64.4% 89%, 61.25% 89.4%, 60.3% 93.75%, 57.2% 95.75%, 54.55% 92.55%, 53.2% 94.35%, 49.95% 94.75%, 49.95% 99%, 48.1% 99.9%, 44.15% 99.2%, 42.25% 95.25%, 39.85% 94.85%, 38.2% 96.65%, 35.4% 92.4%, 30.55% 91.9%, 27.75% 94.05%, 24.9% 93.75%, 26.5% 91.2%, 24.75% 87.35%, 22% 89.2%, 19.9% 87.25%, 17.5% 88.2%, 15.45% 84.95%, 14.6% 80.8%, 11.4% 80.9%, 8.95% 83.05%, 6.95% 79%, 7% 75.25%, 5.2% 72.85%, 2.15% 73.05%, -0.1% 70.4%, -0.1% 9.8%);;
 
 }
